[project]
name = "readii"
version = "1.16.0"
description = "A package to extract radiomic features!"
authors = [{ name = "Katy Scott", email = "Katy.Scott@uhn.ca" }]

license = "MIT"
readme = "README.md"
dependencies = [
  "simpleitk>=2.3.1",
  "matplotlib>=3.9.2,<4",
  "med-imagetools>=1.5.7",
  # "dicom-parser>=1.2.3,<2", # jjjermiah: removing for updated med-imagetools
  "pydicom>=2.3.1,<3",
  "pyradiomics-bhklab>=3.1.4,<4",
]
requires-python = ">=3.10, <3.13"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
readii = "readii.pipeline:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
readii = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["test", "style", "docs"], solve-group = "default" }
publish = { features = ["build", "release"], solve-group = "default" }
py310 = ["py310", "test"]
py311 = ["py311", "test"]
py312 = ["py312", "test"]

############################################## python ###############################################

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

############################################## TEST ################################################

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"

[tool.pixi.feature.test.tasks.test]
cmd = [
  "pytest",
  "--numprocesses=auto",
  "-s",
  "--verbose",
  "--cov=readii",
  "--cov-report=xml:coverage-report/coverage.xml",
  "--cov-config=config/coverage.toml",
]
inputs = ["src", "tests", "config/coverage.toml"]
outputs = ["coverage-report/coverage.xml"]
description = "Run pytest (Note: run `coverage` task to do both)"

[tool.pixi.feature.test.tasks.coverage]
cmd = "coverage report --rcfile=config/coverage.toml"
inputs = ["coverage-report/coverage.xml", "config/coverage.toml"]
depends-on = ["test"]
description = "Run pytest and generate coverage report"

############################################## DOCS ################################################
[tool.pixi.feature.docs.dependencies]
myst-nb = "*"
sphinx-autoapi = "*"
sphinx-rtd-theme = "*"

# TODO::add tasks to build documentation

############################################## STYLE ###############################################
# See config/ruff.toml for the configuration
[tool.pixi.feature.style.dependencies]
ruff = ">=0.4.4"
pre-commit = ">=3.7.1,<3.8"

[tool.pixi.feature.style.tasks]
[tool.pixi.feature.style.tasks.lint]
cmd = "ruff check  --config=config/ruff.toml"
inputs = ["src", "config/ruff.toml"]
description = "Run ruff linter"

[tool.pixi.feature.style.tasks.format]
cmd = "ruff format --config=config/ruff.toml"
inputs = ["src", "config/ruff.toml"]
description = "Run ruff formatter, use `--diff` to see changes only"

#################################### RELEASE & BUILD ###############################################

[tool.pixi.feature.release.dependencies]
python-semantic-release = "*"

[tool.pixi.feature.release.tasks]
semver = 'echo "Next Version is: $(semantic-release version --print)"'
release = "semantic-release version"

[tool.semantic_release]
version_variables = ["src/readii/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]          # version location
changelog_file = "CHANGELOG.md"                            # changelog file
dist_path = "dist/"                                        # where to put dists
upload_to_release = true                                   # auto-create GitHub release
remove_dist = false                                        # don't remove dists
patch_without_tag = true                                   # patch release by default

[tool.semantic_release.branches.main]
match = "(main|development)"

[tool.pixi.feature.build.dependencies]
hatch = "*"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.wheel]
packages = ["src/readii"]
include = ["pyproject.toml", "README.md", "src/**", "config/hatch.toml"]

[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "README.md", "src/", "config/hatch.toml"]
exclude = ["tests/**"]

[tool.pixi.feature.build.tasks]
# Builds the package
build = { cmd = [
  "hatch",
  "build",
  "--clean",
], inputs = [
  "src",
  "pyproject.toml",
], outputs = [
  "dist/*",
], description = "Build the package" }

# Publishes the package to the main PYPI repository, depends on the build task
publish-pypi = { cmd = [
  "hatch",
  "publish",
  "--yes",
  "--repo",
  "main",
], inputs = [
  "dist/*",
], depends-on = [
  "build",
], description = "Publish to main PyPI" }

publish-test = { cmd = [
  "hatch",
  "publish",
  "--yes",
  "--repo",
  "test",
], inputs = [
  "dist/*",
], depends-on = [
  "build",
], description = "Publish to test PyPI" }
